--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: ./actions/action-a.yml
+    - uses: ./.github/actions/action-a.yml
       with:
         MY_NAME: "Mona"
   
